--- a/BTCPayserver.Plugins.Cashu.Tests/BTCPayserver.Plugins.Cashu.Tests.csproj
+++ b/BTCPayserver.Plugins.Cashu.Tests/BTCPayserver.Plugins.Cashu.Tests.csproj
@@ -7,8 +7,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="BTCPayServer.Lightning.All" Version="1.6.9" />
-      <PackageReference Include="DotNut" Version="1.0.5" />
+<!--      <PackageReference Include="BTCPayServer.Lightning.All" Version="1.6.9" />-->
       <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.5" />
       <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
       <PackageReference Include="xunit" Version="2.9.3" />
