--- a/Plugin/BTCPayServer.Plugins.Cashu/BTCPayServer.Plugins.Cashu.csproj
+++ b/Plugin/BTCPayServer.Plugins.Cashu/BTCPayServer.Plugins.Cashu.csproj
@@ -62,7 +62,7 @@
     </ItemGroup>
 
     <ItemGroup>
-<!--        <PackageReference Include="BTCPayServer.Lightning.All" Version="1.6.9" />-->
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
     </ItemGroup>
 
 </Project>
