fix: include DotNut.dll in published plugin package

--- a/Plugin/BTCPayServer.Plugins.Cashu/BTCPayServer.Plugins.Cashu.csproj
+++ b/Plugin/BTCPayServer.Plugins.Cashu/BTCPayServer.Plugins.Cashu.csproj
@@ -54,7 +54,10 @@
       Private="true"
     />
     <EmbeddedResource Include="Resources\**" />
-    <ProjectReference Include="..\..\submodules\DotNut\DotNut\DotNut.csproj" />
+    <ProjectReference Include="..\..\submodules\DotNut\DotNut\DotNut.csproj">
+      <Private>true</Private>
+      <ExcludeAssets>none</ExcludeAssets>
+    </ProjectReference>
   </ItemGroup>
 
   <ItemGroup>
